<resources>
    <string name="app_name">Basket</string>

    <string name="title_activity_main2">TabbedActivity</string>


    <string name="signup">SIGN UP</string>
    <string name="login">LOG IN</string>

    <string name="info1">Email Address</string>
    <string name="info2">Password</string>
    <string name="info3">Name</string>
    <string name="info4">Age</string>
    <string name="info5">Height(cm)</string>
    <string name="info6">Weight(kg)</string>
    <string name="info7">Password</string>

    <string name="me1">Personal Profile</string>
    <string name="mehint">Please enter your name</string>
    <string name="mebutton">View my profile</string>

    <string name="tab_text_1">Recipe</string>
    <string name="tab_text_2">Health</string>
    <string name="tab_text_3">Fitness</string>

    <string name="diarydate">Date</string>
    <string name="diarydatehint">Example:May_4</string>
    <string name="diaryfooddiary">Food Diary</string>
    <string name="diaryfooddiaryhint">Start Writing here</string>
    <string name="diarysave">Save Diary</string>
    <string name="diaryread">Read Diary</string>
    <string name="title_activity_tabbed">Basket</string>

    <string name="foodtitle">Food Tracker</string>
    <string name="foodgoal">Goal:</string>
    <string name="foodeaten">Consumed:</string>
    <string name="foodleft">Left:</string>
    <string name="foodbutton1">Breakfast</string>
    <string name="foodbutton2">Lunch</string>
    <string name="foodbutton3">Dinner</string>

    <string name="button1">Me</string>
    <string name="button2">Plan</string>
    <string name="button3">Diary</string>
    <string name="button4">News</string>
    <string name="buttonfinish">Finish</string>
    <string name="finishhintbreakfast">Breakfast Calorie</string>
    <string name="finishhintbreaklunch">Lunch Calorie</string>
    <string name="finishhintdinner">Dinner Calorie</string>


    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
