<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context="com.example.android.finalfinalcaloriego.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_weight="1"
        android:fontFamily="serif-monospace"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="45sp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/basket"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/sign_up1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:text="@string/signup"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:textColor="#FFFFFF"
            android:fontFamily="monospace"
            android:onClick="signUp"
            />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="60dp"
            android:textColor="#FFFFFF"
            android:fontFamily="monospace"
            android:onClick="logIn"/>


    </LinearLayout>

</LinearLayout>
