<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.android.finalfinalcaloriego.TabbedActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />



    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
    <!--&gt;-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:background="@drawable/buttonstyle"-->
            <!--style="@style/button_text"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/navigation_me"-->
            <!--android:icon="@drawable/me"-->
            <!--android:text="Me"-->
            <!--android:showAsAction="always"-->
            <!--android:layout_weight="1"-->
            <!--android:onClick="me"/>-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:background="@drawable/buttonstyle"-->
            <!--style="@style/button_text"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/navigation_foodPlan"-->
            <!--android:icon="@drawable/planner"-->
            <!--android:text="Food"-->
            <!--android:showAsAction="always"-->
            <!--android:onClick="food"-->
            <!--android:layout_weight="1"/>-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:background="@drawable/buttonstyle"-->
            <!--style="@style/button_text"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/navigation_foodDiary"-->
            <!--android:icon="@drawable/diary"-->
            <!--android:text="Diary"-->
            <!--android:showAsAction="always"-->
            <!--android:onClick="diary"-->
            <!--android:layout_weight="1"/>-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:background="@drawable/buttonstyle"-->
            <!--style="@style/button_text"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/navigation_news"-->
            <!--android:icon="@drawable/news"-->
            <!--android:text="News"-->
            <!--android:showAsAction="always"-->
            <!--android:onClick="news"-->
            <!--android:layout_weight="1"/>-->

    <!--</RelativeLayout>-->

</android.support.design.widget.CoordinatorLayout>
